# CGoGN_3

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  README.md  imgui.ini
cgogn/core/: CMakeLists.txt  cgogn_core.pc.in  cgogn_coreConfig.cmake.in
cgogn/core/apps/: core_test.cpp
cgogn/core/examples/: CMakeLists.txt  core_test.cpp
cgogn/core/functions/: attributes.h  cells.h  cells.h.autosave  cmapbase_infos.h  convert.h  mesh_info.h  mr_cmap_infos.cpp  mr_cmap_infos.h  phi.cpp  phi.h
cgogn/core/types/: attribute_handler.h  cell_marker.h  cells_set.h  mesh_traits.h
cgogn/core/ui_modules/: mesh_data.h  mesh_provider.h
cgogn/core/utils/: assert.cpp  assert.h  buffers.h  definitions.h  numerics.h  string.cpp  string.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h  tuples.h  type_traits.h  unique_ptr.h
cgogn/geometry/: CMakeLists.txt  cgogn_geometry.pc.in  cgogn_geometryConfig.cmake.in  normal.h
cgogn/geometry/algos/: angle.h  area.h  centroid.h  curvature.h  distance.h  distance_heat_solver.h  ear_triangulation.h  filtering.h  fitting.h  geodesic.h  gradient.h  hex_quality.h  intrinsic_triangulation.h  invertion.h  laplacian.h  length.h  medial_axis.h  normal.h  picking.h  pipo.cpp  registration.h  selection.h  subdivision.h  vector_heat_solver.h
cgogn/geometry/apps/: CMakeLists.txt  constriction.cpp  delaunay3_viewer.cpp  filtering.cpp  heat_method.cpp  registration.cpp  sphere_fitting.cpp
cgogn/geometry/examples/: CMakeLists.txt  filtering.cpp
cgogn/geometry/functions/: angle.h  area.h  bounding_box.h  distance.cpp  distance.h  fitting.h  inclusion.h  intersection.h  normal.h  orientation.h  projection.h  vector_ops.h
cgogn/geometry/types/: grid.h  intrinsic_triangulation.h  quadric.h  slab_quadric.h  spherical_quadric.h  vector_traits.h
cgogn/geometry/ui_modules/: registration.h  sphere_fitting.h  surface_constriction.h  surface_differential_properties.h  surface_filtering.h  surface_heat_method.h  surface_selection.h  volume_selection.h
cgogn/io/: CMakeLists.txt  cgogn_io.pc.in  cgogn_ioConfig.cmake.in  pipo.cpp  surface_import.cpp  surface_import.h  utils.h
cgogn/io/apps/: CMakeLists.txt  io_obj_test.cpp
cgogn/io/graph/: cg.cpp  cg.h  cgr.cpp  cgr.h  graph_import.cpp  graph_import.h  skel.cpp  skel.h
cgogn/io/incidence_graph/: ig.h  incidence_graph_import.cpp  incidence_graph_import.h
cgogn/io/point/: point_import.cpp  point_import.h
cgogn/io/surface/: obj.h  off.cpp  off.h  ply.h  surface_import.cpp  surface_import.h
cgogn/io/volume/: cgns.h  mesh.h  meshb.h  tet.cpp  tet.h  volume_import.cpp  volume_import.h
cgogn/modeling/: CMakeLists.txt  cgogn_modeling.pc.in  cgogn_modelingConfig.cmake.in  pipo.cpp  skeleton_sampling.h
cgogn/modeling/algos/: convex_hull.h  graph_resampling.cpp  graph_resampling.h  graph_to_hex.cpp  graph_to_hex.h  graph_utils.cpp  graph_utils.h  hole_filling.h  incidenceGraph_to_hex.cpp  incidenceGraph_to_hex.h  medial_axis.h  mesh_repair.h  skeleton.h  subdivision.h  subdivision_utils.h  topstoc.h  vessels_generation.cpp  vessels_generation.h  volume_utils.cpp  volume_utils.h
cgogn/modeling/apps/: CMakeLists.txt  convex_hull.cpp  deformation.cpp  modeling.cpp  mr_volume.cpp  power_shape.cpp  skeleton_extractor.cpp  sphere_partition.cpp  tubular_mesh.cpp  voronoi_medial_mesh.cpp
cgogn/modeling/examples/: CMakeLists.txt  deformation.cpp  gregory.cpp  modeling.cpp  mr_volume.cpp  skeleton_extractor.cpp  skeleton_extractor_module.h  sphere_partition.cpp  subdivision.cpp  subdivision_imgui.cpp  tubular_mesh.cpp  tubular_mesh_module.h
cgogn/modeling/ui_modules/: power_shape.h  skeleton_extractor_module.h  surface_deformation.h  surface_modeling.h  tubular_mesh_module.h  volume_deformation.h  volume_mr_modeling.h
cgogn/rendering/: CMakeLists.txt  camera.cpp  camera.h  cgogn_rendering.pc.in  cgogn_renderingConfig.cmake.in  drawer.cpp  drawer.h  ebo.h  fbo.cpp  fbo.h  frame_manipulator.cpp  frame_manipulator.h  gl_image.cpp  gl_image.cpp.h  gl_image.h  gl_viewer.cpp  gl_viewer.h  imgui_viewer.cpp  imgui_viewer.h  mesh_render.cpp  mesh_render.h  mesh_render.h.bak  mesh_render_base.h  mframe.h  shader_program.cpp  shader_program.h  shape_drawer.cpp  shape_drawer.h  skelshape.cpp  skelshape.h  stack.tasks  stb_image.h  text_drawer.cpp  text_drawer.h  texture.h  topo_drawer.cpp  topo_drawer.h  transparency_drawer.cpp  transparency_drawer.h  transparency_volume_drawer.cpp  (+10 more)
cgogn/rendering/apps/: CMakeLists.txt  obj_tex_viewer.cpp  simple_gm2_viewer.cpp  simple_gm3_viewer.cpp  simple_graph_viewer.cpp  simple_incidence_graph_viewer.cpp  simple_surface_viewer.cpp  simple_volume_viewer.cpp  surface_volume_viewer.cpp  test_shape.cpp  test_skel_shapes.cpp
cgogn/rendering/examples/: CMakeLists.txt  drawing.cpp  mt_viewer.cpp  multiresolution_volume_viewer.cpp  picking_viewer.cpp  point_set_drawing.cpp  polyline_drawing.cpp  simple_graph_viewer.cpp  simple_incidence_graph_viewer.cpp  simple_surface_viewer.cpp  simple_viewer.cpp  simple_viewer_ti.h  simple_volume_viewer.cpp  surface_volume_viewer.cpp  text_drawing.cpp  viewer_topo.cpp  (+2 more)
cgogn/rendering_pureGL/: CMakeLists.txt  camera.cpp  camera.h  cgogn_rendering_pureGLConfig.cmake.in  drawer.cpp  drawer.h  ebo.h  fbo.cpp  fbo.h  fonte.qrc  frame_manipulator.cpp  frame_manipulator.h  gl_image.cpp  gl_image.cpp.h  imgui_viewer.cpp  imgui_viewer.h  map_render.cpp  map_render.h  mesh_render.cpp  mesh_render.h  mframe.h  pure_gl_viewer.cpp  pure_gl_viewer.h  stack.tasks  text_drawer.cpp  text_drawer.h  texture.h  topo_drawer.cpp  topo_drawer.h  transparency_drawer.h  transparency_volume_drawer.h  types.h  ubo.h  vao.h  vbo.h  vbo_update.h  volume_drawer.cpp  volume_drawer.h  wall_paper.cpp  wall_paper.h
cgogn/simulation/: CMakeLists.txt  cgogn_simulation.pc.in  cgogn_simulationConfig.cmake.in
cgogn/ui/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  cgogn_ui.pc.in  cgogn_uiConfig.cmake.in  gl_viewer.cpp  gl_viewer.h  imgui_helpers.h  inputs.h  module.cpp  module.h  moving_frame.h  portable-file-dialogs.h  tools.h  view.cpp  view.h  window.cpp  window.h
(+495 files in other folders)
